my-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: development
spec:
  selector:
    app: web-app
  ports:
  - name: appport
    protocol: TCP
    port: 5000
    targetPort: 5000
