my-app/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-domain-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: emailwhitelister.ml
    http:
      paths:
      - path: /
        backend:
          serviceName: web-app-service
          servicePort: appport
